syntax = "proto3";

/*option java_multiple_files = true;
option java_package = "io.grpc.examples.routeguide";
option java_outer_classname = "RouteGuideProto";*/

service SendInt {
	rpc EchoInt(Wrapper) returns(Wrapper) {}
	rpc EchoFloat(WrapperF) returns(WrapperF) {}
	rpc EchoString(WrapperS) returns(WrapperS) {}
	rpc EchoComplex(WrapperComplex) returns(WrapperComplex) {}
}

message Wrapper {
	int32 number = 1;
}

message WrapperF {
	float number = 1;
}
message WrapperS {
	string number = 1;
}

message WrapperComplex {
	int32 inti = 1;
	float floatf = 2;
	string strings = 3;
}
